Fix contrast form

--- a/assets/style.css
+++ b/assets/style.css
@@ -269,7 +269,7 @@ form {
 form input {
     width: 100%;
     background-color: transparent;
-    border: solid 1px var(--form-border);
+    border: solid 1px black;
     height: 2.5em;
     margin-bottom: 20px;
 }
@@ -277,7 +277,7 @@ form input {
 form textarea {
     width: 100%;
     background-color: transparent;
-    border: solid 1px var(--form-border);
+    border: solid 1px black;
     height: 5em;
     line-height: 2.5em;
     font-size: 1.2em;
@@ -285,7 +285,7 @@ form textarea {
 }
 
 input[type="submit"] {
-    background-color: var(--primary-color);
+    background-color: green;
     padding: 0.5em 1em;
 }
 
